--- a/src/main/resources/static/views/buscaQuadra3.html
+++ b/src/main/resources/static/views/buscaQuadra3.html
@@ -12,31 +12,17 @@
                                 <tr>
                                     <th>#</th>
                                     <th>Jogador</th>
-                                    <th>Media</th>
+                                    <th>E Goleiro</th>
+                                    <th>Numero Jogos</th>
                                     <th>Numero de Gols</th>
+                                    <th>Media %</th>
+                                    <th>Media Gols %</th>
+                                    
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td>1</td>
-                                    <td>Table cell</td>
-                                    <td>Table cell</td>
-                                    <td>Table cell</td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Table cell</td>
-                                    <td>Table cell</td>
-                                    <td>Table cell</td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>Table cell</td>
-                                    <td>Table cell</td>
-                                    <td>Table cell</td>
-                                </tr>
-                                <tr>
-                                    <td>4</td>
                                     <td>Table cell</td>
                                     <td>Table cell</td>
                                     <td>Table cell</td>
