--- a/src/main/resources/static/views/cadastro.html
+++ b/src/main/resources/static/views/cadastro.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="col-md-12 col-md-offset-3" ng-controller="RegisterController as rc">
+    <div class="col-md-12" ng-controller="RegisterController as rc">
         <h2>Novo Usuario</h2>
         <div ng-show="rc.error" class="alert alert-danger">{{rc.error}}</div>
         <div class="panel panel-default">
@@ -43,11 +43,6 @@
                         </div>
                     </div>
                     <button type="submit" class="btn btn-default btn-block btn-lg" data-ng-disabled="!rc.canSubmit()">Salvar</button>
-                    <div class="callout callout-info">
-                        <p>Submit button will be active only when all fields are valid.</p>
-                    </div>
-                    <div class="divider"></div>
-                    <div class="alert alert-info" data-ng-show="showInfoOnSubmit">This is just for demo. In real project, you will submit form with AJAX :)</div>
                 </form>
             </div>
         </div>
