--- a/src/main/resources/static/views/cadastro.html
+++ b/src/main/resources/static/views/cadastro.html
@@ -11,7 +11,7 @@
                             <label for="">Nome *</label>
                         </div>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control" placeholder="" data-ng-model="rc.user.nome" required data-ng-minlength="2" data-ng-maxlength="30">
+                            <input type="text" class="form-control" placeholder="" data-ng-model="rc.user.name" required data-ng-minlength="2" data-ng-maxlength="30">
                         </div>
                     </div>
                     <div class="form-group">
