--- a/src/main/resources/static/views/dashboard2.html
+++ b/src/main/resources/static/views/dashboard2.html
@@ -111,7 +111,7 @@ ul, menu, dir {
             <ul class="glyphicon-icons" style="max-width: 100%;" data-ng-controller="NavController"> 
             <div class="row" id="first-row"><div class="container">
             
-            <li class="col-md-1 col-sm-2 col-xs-6 grid-icon"> <a href="#/dashboard">
+            <li class="col-md-1 col-sm-2 col-xs-6 grid-icon"> <a href="#/meusJogos">
                 <i class="glyphicon glyphicon-glyphicon-asterisk" data-unicode="2a">*</i> 
                 <span class="glyphicon-class">Meus Jogos</span></a>
 
