--- a/src/main/resources/static/views/include-horarios-tab.html
+++ b/src/main/resources/static/views/include-horarios-tab.html
@@ -6,8 +6,8 @@
 			<div class="panel list-group">
 				<a class="list-group-item" data-toggle="collapse" data-target="#sm{{jogo.id}}" data-parent="#menu"><span
 					class="glyphicon glyphicon-eye-open pull-left"></span><span
-					class="pull-left"> {{quadra.nome}} - {{jogo.dia}} -
-						{{jogo.horaInicial}} - {{jogo.horaFinal}} </span> <span
+					class="pull-left"> {{jogo.id}} - {{quadra.nome}} - {{jogo.dia}} -
+						{{jogo.horaInicial}} - {{jogo.horaFinal}} -//{{jogo.id}}  </span> <span
 					class="pull-right"> <span
 						ng-if="jogo.status=='INDISPONIVEL'" style="font-size: 8px"
 						class="label label-danger"> * Reservado</span> <span
