--- a/src/main/resources/static/views/nav.html
+++ b/src/main/resources/static/views/nav.html
@@ -4,7 +4,7 @@
         data-ng-controller="NavController"
 		data-collapse-nav
         data-highlight-active>
-        <li><a href="#/dashboard">     <i class="fa fa-dashboard"></i><span data-translate="Meus Jogos"></span> </a></li>
+        <li><a href="#/meusJogos">     <i class="fa fa-dashboard"></i><span data-translate="Meus Jogos"></span> </a></li>
         <li><a href="#/buscaQuadra">   <i class="fa fa-dashboard"></i>  <span data-translate="Buscar Quadra"></span> </a></li>
         <li><a href="#/notificacoes">  <i class="fa fa-dashboard"></i> <span data-translate="Notificações"></span><span class="badge badge-success">{{notificacoesCount}}</span> </a></li>
         <li><a href="#/buscaQuadra3">  <i class="fa fa-dashboard"></i><span data-translate="Escolher Time"></span> </a></li>
