--- a/src/main/resources/static/views/include-filter-checbox.html
+++ b/src/main/resources/static/views/include-filter-checbox.html
@@ -1,52 +1,51 @@
 <div id="buscarQuadra-container3" class="creator-container"
 	style="margin-top: 1%; margin-left: 1%;">
 	<label for="Dom" class="btn btn-danger">Dom<input
-		ng-click="orderByMe('SABADO')" type="checkbox" name="gender0"
-		id="defaults" checked="checked" value="DOMINGO" class="badgebox"
+		ng-click="orderByMe('DOMINGO')" type="checkbox" name="gender0"
+		id="Dom" checked="checked" value="DOMINGO" class="badgebox"
 		ng-true-value="'1'" ng-false-value="'2'"><span class="badge">&check;</span></label>
 	<label for="Seg" class="btn btn-info">Seg<input
-		ng-click="orderByMe('SABADO')" type="checkbox" name="gender1"
-		checked="checked" value="SEGUNDA" id="default" class="badgebox"
+		ng-click="orderByMe('SEGUNDA')" type="checkbox" name="gender1"
+		checked="checked" value="SEGUNDA" id="Seg" class="badgebox"
 		ng-true-value="'1'" ng-false-value="'2'"><span class="badge">&check;</span></label>
 	<label for="Ter" class="btn btn-info">Ter<input
-		ng-click="orderByMe('SABADO')" type="checkbox" name="gender2"
-		checked="checked" value="TERCA" id="primary" class="badgebox"
+		ng-click="orderByMe('TERCA')" type="checkbox" name="gender2"
+		checked="checked" value="TERCA" id="Ter" class="badgebox"
 		ng-true-value="'TERCA'" ng-false-value="'2'"><span
-		class="badge">&check;</span></label> <label for="Qua" class="btn btn-info">Qua<input
-		ng-click="orderByMe('SABADO')" type="checkbox" name="gender3"
-		checked="checked" value="QUARTA" id="info" class="badgebox"
+		class="badge">&check;</span></label> 
+	<label for="Qua" class="btn btn-info">Qua<input
+		ng-click="orderByMe('QUARTA')" type="checkbox" name="gender3"
+		checked="checked" value="QUARTA" id="Qua" class="badgebox"
 		ng-true-value="'1'" ng-false-value="'2'"><span class="badge">&check;</span></label>
 	<label for="Qui" class="btn btn-info">Qui<input
-		ng-click="orderByMe('SABADO')" type="checkbox" name="gender4"
-		checked="checked" value="QUINTA" id="success" class="badgebox"
+		ng-click="orderByMe('QUINTA')" type="checkbox" name="gender4"
+		checked="checked" value="QUINTA" id="Qui" class="badgebox"
 		ng-true-value="'1'" ng-false-value="'2'"><span class="badge">&check;</span></label>
 	<label for="Sex" class="btn btn-info">Sex<input
-		ng-click="orderByMe('SABADO')" type="checkbox" name="gender5"
-		checked="checked" value="SEXTA" id="warning" class="badgebox"
+		ng-click="orderByMe('SEXTA')" type="checkbox" name="gender5"
+		checked="checked" value="SEXTA" id="Sex" class="badgebox"
 		ng-true-value="'1'" ng-false-value="'2'"><span class="badge">&check;</span></label>
 	<label for="Sab" class="btn btn-warning">Sab<input
 		ng-click="orderByMe('SABADO')" type="checkbox" name="gender6"
-		checked="checked" value="SABADO" id="danger" class="badgebox"
+		checked="checked" value="SABADO" id="Sab" class="badgebox"
 		ng-true-value="'1'" ng-false-value="'2'"><span class="badge">&check;</span></label>
 </div>
 <div id="buscarStatus-container3" class="creator-container"
 	style="margin-top: 1%; margin-left: 1%; margin-bottom: 1%;">
-	<label for="Dom" class="btn btn-info">DISPONIVEL<input
-		ng-click="orderByMe('SABADO')" type="checkbox" name="gender0"
-		id="defaults" value="DISPONIVEL" checked="checked" class="badgebox"
+	<label for="DISPONIVEL" class="btn btn-info">DISPONIVEL<input
+		ng-click="orderByMe('SABADO')" type="checkbox" name="gender7"
+		id="DISPONIVEL" value="DISPONIVEL" checked="checked" class="badgebox"
 		ng-true-value="'1'" ng-false-value="'2'"><span class="badge">&check;</span></label>
-	<label for="Seg" class="btn btn-info">ACONFIRMAR<input
-		ng-click="orderByMe('SABADO')" type="checkbox" name="gender1"
-		value="ACONFIRMAR" id="default" checked="checked" class="badgebox"
+	<label for="ACONFIRMAR" class="btn btn-info">ACONFIRMAR<input
+		ng-click="orderByMe('ACONFIRMAR')" type="checkbox" name="gender8"
+		value="ACONFIRMAR" id="ACONFIRMAR" checked="checked" class="badgebox"
 		ng-true-value="'1'" ng-false-value="'2'"><span class="badge">&check;</span></label>
-	<label for="Ter" class="btn btn-info">OCUPADO<input
-		ng-click="orderByMe('SABADO')" type="checkbox" name="gender2"
-		value="OCUPADO" id="primary" class="badgebox" checked="checked"><span
-		class="badge">&check;</span></label> <label for="Qua" class="btn btn-info">INDISPONIVEL<input
-		ng-click="orderByMe('SABADO')" type="checkbox" name="gender3"
-		value="INDISPONIVEL" id="info" class="badgebox" checked="checked"><span
+	<label for="OCUPADO" class="btn btn-info">OCUPADO<input
+		ng-click="orderByMe('OCUPADO')" type="checkbox" name="gender9"
+		value="OCUPADO" id="OCUPADO" class="badgebox" checked="checked"><span
 		class="badge">&check;</span></label>
-</div>
-
-
+		 <label for="INDISPONIVEL" class="btn btn-info">INDISPONIVEL<input
+		ng-click="orderByMe('INDISPONIVEL')" type="checkbox" name="gender10"
+		value="INDISPONIVEL" id="INDISPONIVEL" class="badgebox" checked="checked"><span
+		class="badge">&check;</span></label>
 </div>
