--- a/src/main/resources/static/views/pages/signin.html
+++ b/src/main/resources/static/views/pages/signin.html
@@ -293,7 +293,7 @@
                         </section>
                     </uib-tab>
                     <uib-tab heading="Mapa">
-                        <div class="panel-body" data-ng-controller="MapDemoController">
+                        <div class="panel-body" >
                             <map class="ui-map" zoom="13" center="[-19.7539784,-47.9349623]" map-type-id="TERRAIN" zoom="13" scrollwheel="false">
 							</map>
                         </div>
